# mg-onchain-analysis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFERENCES.md  ROADMAP.md  SECURITY.md  SESSION-KICKOFF.md  SPRINTS.md
.claude/agents/: architect.md  blockchain-engineer.md  data-engineer.md  developer.md  onchain-analyst.md  pm.md  security-researcher.md  systems-qa.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
config/: adapters.toml.example  detectors.toml  detectors.toml.example  graph.toml  indexer.toml.example  known_bridges.toml  known_drainers.toml  scoring.toml  scoring.toml.example  service.toml  storage.toml.example  token-registry.toml.example
crates/chain-adapter/: Cargo.toml
crates/chain-adapter/src/: error.rs  lib.rs
crates/chain-adapter/src/ethereum/: adapter.rs  decoder.rs  http.rs  mod.rs  reorg.rs  rpc.rs  types.rs
crates/chain-adapter/src/jsonrpc/: mod.rs
crates/chain-adapter/src/solana/: backfill.rs  checkpoint.rs  config.rs  decode.rs  mod.rs  reconnect.rs  subscribe.rs  token2022.rs
crates/chain-adapter/tests/: ethereum_fixture_replay.rs  subscribe_mock_test.rs
crates/chain-adapter/tests/fixtures/: spl_transfer_checked_fixture.rs
crates/chain-adapter/tests/fixtures/ethereum/: mainnet_block_21000000.json
crates/client-sdk/: Cargo.toml
crates/client-sdk/src/: auth.rs  builder.rs  error.rs  http.rs  lib.rs  retry.rs  types.rs  ws.rs
crates/client-sdk/tests/: determinism_test.rs  http_roundtrip_test.rs  ws_mock_test.rs
crates/common/: Cargo.toml
crates/common/src/: amount.rs  anomaly.rs  chain.rs  error.rs  event.rs  lib.rs  token.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: config.rs  context.rs  d01_honeypot.rs  d02_rug_pull.rs  d03_concentration.rs  d04_pump_dump.rs  d05_wash_trading.rs  d06_mint_burn.rs  d07_withdraw_withheld.rs  d08_sybil.rs  d09_deployer_changepoint.rs  d10_launch_audit.rs  d11_synchronized_activity.rs  d12_permit2_drainer.rs  d13_sandwich_mev.rs  d14_bridge_drain.rs  detector.rs  error.rs  graduation_amplifier.rs  lib.rs  lockers.rs  mock.rs  rpc.rs  signals.rs  smart_money_amplifier.rs  token_status.rs
crates/dex-adapter/: Cargo.toml
crates/dex-adapter/src/: error.rs  lib.rs
crates/dex-adapter/src/solana/: common.rs  mod.rs  openbook_market.rs  pool_accounts.rs  raydium_cpmm.rs  raydium_v4.rs  raydium_v4_state.rs  simulation.rs
crates/evm-types/: Cargo.toml
crates/evm-types-macros/: Cargo.toml
crates/evm-types-macros/src/: generate.rs  lib.rs  parse.rs
crates/evm-types-macros/tests/: events.rs
crates/evm-types/src/: address.rs  hash.rs  keccak.rs  lib.rs  log.rs  uint.rs
crates/evm-types/src/abi/: decode.rs  error.rs  mod.rs  types.rs
crates/evm-types/src/event/: decoder.rs  mod.rs  signature.rs
crates/evm-types/tests/: abi_dynamic.rs  abi_static.rs  eip55.rs  keccak.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: cache.rs  config.rs  error.rs  lib.rs  metrics.rs  ratelimit.rs  state.rs
crates/gateway/src/auth/: argon.rs  jwt.rs  mod.rs  scopes.rs  user_store.rs
crates/gateway/src/routes/: admin.rs  analyze.rs  analyze_v2.rs  auth_handler.rs  detectors_handler.rs  events.rs  health.rs  metrics_handler.rs  mod.rs  risk.rs  score.rs
crates/gateway/src/ws/: mod.rs  watchlist.rs
crates/graph/: Cargo.toml
crates/graph/src/: api.rs  clusters.rs  config.rs  cycles.rs  edges.rs  error.rs  labels.rs  lib.rs  mock.rs  smart_money.rs  smart_money_lookup.rs  typed_edges.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: batcher.rs  config.rs  coordinator.rs  error.rs  graph_writer.rs  hooks.rs  lib.rs  reorg.rs  router.rs  shutdown.rs  sink.rs  trigger.rs
crates/indexer/tests/: multi_chain_smoke.rs  pipeline_mock_test.rs  sprint4_exit_test.rs  sprint5_exit_test.rs
crates/scoring/: Cargo.toml
crates/scoring/src/: aggregate.rs  attenuation.rs  config.rs  coverage.rs  decay.rs  engine.rs  evidence.rs  graduation_multiplier.rs  lib.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  erased_detector.rs  lib.rs  main.rs  pg_swap_fetcher.rs  risk_report_store.rs  streaming_config.rs  streaming_metrics.rs
crates/server/src/init/: adapters.rs  coordinator.rs  detectors.rs  hooks.rs  known_bridges.rs  known_drainers.rs  locker_watcher.rs  metadata_fetchers.rs  mod.rs  periodic_scan.rs  smart_money.rs  storage.rs  tracing_init.rs
crates/server/src/streaming/: mod.rs  registry.rs  scheduler.rs  worker.rs
crates/server/tests/: binary_smoke.rs  cli_integration.rs  d01_simulation_e2e_test.rs  sprint8_exit_test.rs  streaming_d04_integration_test.rs  streaming_plumbing_test.rs
crates/solana-types/: Cargo.toml
crates/solana-types/src/: epoch.rs  hash.rs  instruction.rs  keypair.rs  lib.rs  pubkey.rs  signature.rs  slot.rs  transaction.rs  wire.rs
crates/solana-types/tests/: solana_canonical_pubkeys.rs
crates/storage/: Cargo.toml
crates/storage/src/: checkpoint.rs  config.rs  error.rs  lib.rs  migrations.rs  pg.rs  price_provider.rs  token_metadata.rs  verdict_cache.rs  wallet_pnl_corpus.rs
crates/token-registry/: Cargo.toml
crates/token-registry/data/: cex_wallets.json
crates/token-registry/src/: cex_registry.rs  classify.rs  config.rs  enrich.rs  error.rs  graduation.rs  launchpad_decoder.rs  lib.rs  locker.rs  programs.rs  rpc.rs  snapshot.rs  tlv.rs
crates/token-registry/tests/: classification_test.rs  enrichment_mock_test.rs  locker_test.rs
crates/token-registry/tests/fixtures/enrichment/: rave_FeqiF7TE_state.json  wet_WETZjtp_state.json
docs/adr/: 0001-phase0-synthesis.md  0002-drop-clickhouse-postgres-only.md  0003-self-sovereign-infrastructure.md  0004-evm-node-choice-geth-vs-reth.md  0005-multi-chain-indexer-spawn-pattern.md  0006-code-level-self-sovereignty.md  0007-pull-based-query-engine.md
docs/api/: openapi.yaml
infra/: .env.example  Dockerfile.service  PRODUCTION.md  docker-compose.prod.yml  quickstart.md
research/: 01-market-scan.md  02-detection-methodology.md  03-feature-gap-2026-04-24.md  sprint13-b-citations.md
(+350 files in other folders)
