[workspace]
members = [
    "crates/common",
    "crates/chain-adapter",
    "crates/indexer",
    "crates/token-registry",
    "crates/dex-adapter",
    "crates/graph",
    "crates/detectors",
    "crates/scoring",
    "crates/storage",
    "crates/gateway",
    "crates/client-sdk",
    "crates/server",
    # Sprint 24 — ADR 0006 (code-level self-sovereignty)
    "crates/evm-types",
    "crates/evm-types-macros",
    # Sprint 25 — ADR 0006 Solana divestment
    "crates/solana-types",
]
resolver = "3"

[workspace.package]
version       = "0.1.0"
edition       = "2024"
# Rust version policy: track latest stable. This is an internal monorepo (binaries +
# no published crates), so we have zero downstream-consumer reason to lag. New stable
# every 6 weeks → bump this in lockstep. Any `rustup update` run by the user is the
# trigger to bump. As of Sprint 24 (2026-04-27) latest stable is 1.95.
rust-version  = "1.95"
license       = "UNLICENSED"
repository    = "https://github.com/meatgrinder/mg-onchain-analysis"

[workspace.dependencies]
tokio             = { version = "1", features = ["full"] }
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# OpenTelemetry / OTLP — Sprint 26 (T26-7) under ADR 0007.
# All four crates implement the public OpenTelemetry / OTLP specifications
# (https://opentelemetry.io/docs/, https://github.com/open-telemetry/opentelemetry-specification);
# admitted under ADR 0006 Rule A as generic spec implementations, NOT vendor SDKs.
# `grpc-tonic` feature reuses our existing tonic dep for the OTLP wire transport.
opentelemetry         = "0.27"
opentelemetry_sdk     = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
rust_decimal      = { version = "1", features = ["serde-with-str"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "2"
chrono            = { version = "0.4", features = ["serde"] }
hex               = "0.4"
futures           = "0.3"
url               = { version = "2", features = ["serde"] }
tokio-retry       = "0.3"
bs58              = "0.5"

# ed25519-dalek: RFC 8032 Ed25519 signing for crates/solana-types/ Keypair wrapper.
# Admitted under ADR 0006 Rule A: implements a public IETF specification (RFC 8032).
# See docs/adr/0006-code-level-self-sovereignty.md §Allowed and Banned Dependencies.
ed25519-dalek = "2"

# sha2: SHA-256 for PDA derivation in crates/solana-types/ Pubkey.
# Already a direct dep in crates/dex-adapter/; elevated to workspace for consistency.
sha2 = "0.10"

# ---- Storage crate workspace deps ----

# sqlx 0.8: Postgres async client with migration runner.
# runtime-tokio-rustls: async runtime + TLS. postgres: driver. chrono: DateTime.
# migrate: sqlx migrate runner. macros: query! (unused unless sqlx-check feature enabled).
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "migrate",
    "macros",
] }

# UUID for deployer_clusters cluster_id generation.
uuid = { version = "1", features = ["v4", "serde"] }

# async-trait: required for async methods in dyn-safe trait impls (CheckpointStore).
async-trait = "0.1"

# tokio-tungstenite 0.29 — WebSocket RFC 6455 client.
# Used by crates/chain-adapter/src/jsonrpc/ (in-tree JSON-RPC 2.0 over WS).
# rustls-tls-native-roots: TLS without OpenSSL; consistent with reqwest's rustls feature.
# ADR 0006 Rule A: WebSocket is a public spec (RFC 6455) — allowed in main workspace.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

# HTTP client — used by token-registry for JSON-RPC calls to Solana RPC.
# rustls-tls: avoids native OpenSSL dep.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# base64 0.22 — decodes account data returned by getAccountInfo (base64-encoded bytes).
base64 = "0.22"

# toml 0.8 — config file parsing for config/detectors.toml.
toml = "0.8"

# clap 4 — CLI argument parsing for onchain-service binary.
# derive feature enables #[derive(Parser)] for declarative arg definitions.
clap = { version = "4", features = ["derive"] }

# tokio-util — CancellationToken for graceful shutdown (ShutdownSignal).
# Already a transitive dep via indexer; made explicit here for crates/server.
tokio-util = { version = "0.7", features = ["rt"] }

# async-channel 2 — MPMC bounded channel for the streaming worker queue.
# Native MPMC avoids the Arc<Mutex<mpsc::Receiver>> antipattern (design 0014 §4 rev 1).
async-channel = "2"

# statrs 0.18 — pure Rust statistics library for Student-t log-PDF used by D09 BOCPD.
# Pure Rust, no sys deps; ADR 0003 compliant. Used for Normal-Gamma posterior predictive.
# See docs/designs/0016-detector-09-bocpd-deployer-changepoint.md §3.4.
statrs = "0.18"

