[package]
name        = "mg-onchain-chain-adapter"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
description = "ChainAdapter trait and per-chain implementations (Solana via Yellowstone gRPC, EVM chains in Phase 4)"

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
[dependencies]
# Workspace-shared
anyhow.workspace        = true
tokio.workspace         = true
tracing.workspace       = true
serde.workspace         = true
serde_json.workspace    = true
thiserror.workspace     = true
chrono.workspace        = true
futures.workspace       = true
url.workspace           = true
tokio-retry.workspace   = true
bs58.workspace          = true
base64.workspace        = true
rust_decimal.workspace  = true

# Our Solana primitive types (replaces solana-sdk Pubkey/Signature/Slot/Hash/Epoch).
mg-solana-types = { path = "../solana-types" }

# tokio-stream for ReceiverStream (mpsc → Stream bridging).
tokio-stream = "0.1"

# tokio-tungstenite: WebSocket RFC 6455 client for the in-tree JSON-RPC 2.0 over WS
# implementation (JsonRpcClient in crates/chain-adapter/src/jsonrpc/).
# Replaces alloy::transports::ws::WsConnect + alloy_rpc_client::RpcClient (ADR 0006 Task #5b).
tokio-tungstenite.workspace = true

# futures-util: SinkExt + StreamExt for the WS write/read pump halves.
# Provided transitively via futures; made explicit here for direct SinkExt/StreamExt use.
futures-util = "0.3"

# reqwest for backfill JSON-RPC calls (minimal HTTP client; avoids full solana-client dep).
reqwest = { version = "0.12", features = ["json"] }

# async-trait: required for #[async_trait] on EthereumRpc (object-safe async methods).
async-trait.workspace = true

# hex: decode data field hex strings in eth_getLogs responses.
hex.workspace = true

# Internal
mg-onchain-common      = { path = "../common" }
mg-onchain-dex-adapter = { path = "../dex-adapter" }
mg-evm-types           = { path = "../evm-types" }
mg-evm-types-macros    = { path = "../evm-types-macros" }

# ---------------------------------------------------------------------------
# Dev-dependencies (tests only — no network calls in unit tests)
# ---------------------------------------------------------------------------
[dev-dependencies]
