[package]
name        = "mg-onchain-server"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
description = "Binary entry point: background task orchestration for onchain-service"

[features]
default = []
# exex: activates chain-adapter/exex transitively + gates onchain-reth binary entry.
# Sprint 24 ships the stub binary only. Sprint 25 implements Reth NodeBuilder + install_exex.
exex = ["mg-onchain-chain-adapter/exex", "dep:reth-tracing"]
# test-containers: enables Docker testcontainers Postgres for onchain-validate --docker mode.
# Requires Docker daemon accessible. Gated so the binary is runnable in environments without Docker.
# Also enables test-utils mock stores in mg-onchain-graph + mg-onchain-storage so that
# D08/D11/D12/D13 can be instantiated with empty mock stores in the Docker validate harness.
# Compile with: `cargo build --features test-containers --bin onchain-validate`
test-containers = [
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "mg-onchain-graph/test-utils",
    "mg-onchain-storage/test-utils",
    "mg-onchain-token-registry/test-utils",
    "mg-onchain-detectors/test-utils",
]

[[bin]]
name = "onchain-service"
path = "src/main.rs"
# No required-features: WS-mode binary works with default features.

[[bin]]
name = "onchain-reth"
path = "src/main_reth.rs"
required-features = ["exex"]

[[bin]]
name = "onchain-cli"
path = "src/bin/onchain_cli.rs"
# No required-features: CLI only needs reqwest + clap.

[[bin]]
name = "onchain-validate"
path = "src/bin/onchain_validate.rs"
# No required-features: harness uses in-process config loading only.

[[bin]]
name = "onchain-calibrate"
path = "src/bin/onchain_calibrate.rs"
# No required-features: calibration pass is pure in-process (no Postgres).

[dependencies]
anyhow.workspace      = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
tracing-subscriber.workspace = true
serde.workspace       = true
reqwest.workspace     = true
chrono.workspace      = true
futures.workspace     = true
async-channel.workspace = true
async-trait.workspace = true
serde_json.workspace  = true
toml.workspace        = true
clap.workspace        = true
tokio-util.workspace  = true
url.workspace         = true
rust_decimal.workspace = true
prometheus            = "0.13"
# sqlx needed for PgTokenRiskReportStore in risk_report_store.rs (V00012).
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "migrate",
] }
mg-onchain-common          = { path = "../common" }
mg-onchain-gateway         = { path = "../gateway" }
mg-onchain-indexer         = { path = "../indexer" }
mg-onchain-storage         = { path = "../storage" }
mg-onchain-detectors       = { path = "../detectors" }
mg-onchain-scoring         = { path = "../scoring" }
mg-onchain-token-registry  = { path = "../token-registry" }
mg-onchain-dex-adapter     = { path = "../dex-adapter" }
mg-onchain-graph           = { path = "../graph" }
mg-onchain-chain-adapter   = { path = "../chain-adapter" }

# Reth ExEx deps — optional; compiled only with --features exex.
# reth-tracing: Reth's log/tracing setup; needed when running as a Reth-embedded binary.
# reth-node-builder and reth-cli are NOT added here in Sprint 24; the onchain-reth binary
# entry is a stub (Sprint 25 will add NodeBuilder wiring).
reth-tracing = { workspace = true, optional = true }

# test-containers: Postgres testcontainer for onchain-validate --docker mode.
# Optional — compile with `--features test-containers`.
testcontainers         = { version = "0.23", optional = true }
testcontainers-modules = { version = "0.11", features = ["postgres"], optional = true }

[dev-dependencies]
tokio         = { workspace = true, features = ["macros", "rt-multi-thread"] }
bs58          = { workspace = true }
sqlx          = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
async-trait   = { workspace = true }
base64        = { workspace = true }
solana-sdk    = { workspace = true }
rust_decimal  = { workspace = true }
testcontainers            = "0.23"
testcontainers-modules    = { version = "0.11", features = ["postgres"] }
wiremock              = "0.6"
mg-onchain-detectors      = { path = "../detectors" }
mg-onchain-storage        = { path = "../storage" }
mg-onchain-token-registry = { path = "../token-registry", features = ["test-utils"] }
mg-onchain-scoring        = { path = "../scoring" }
mg-onchain-common         = { path = "../common" }
mg-onchain-dex-adapter    = { path = "../dex-adapter", features = ["test-utils"] }
